hemliga-lappen-main/k8s/overlays/prod/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: hemliga-lappen-prod-rollout
  annotations:
    notifications.argoproj.io/subscribe.on-rollout-step-completed.slack: argoCD-test-channel-1;argoCD-test-channel-2
    notifications.argoproj.io/subscribe.on-rollout-updated.slack: argoCD-test-channel-1;argoCD-test-channel-2
    notifications.argoproj.io/subscribe.on-rollout-updated.github: ""
    notifications.argoproj.io/subscribe.on-rollout-step-completed.github: ""
spec:
  replicas: 5
  selector:
    matchLabels:
      app: hemliga-lappen
      team: team-devops
      unit: developers
  workloadRef:                                 # Reference an existing Deployment using workloadRef field
    apiVersion: apps/v1
    kind: Deployment
    name: hemliga-lappen-deployment
  strategy:
    canary:
      steps:
      - setWeight: 5
      - analysis:
          templates:
          - templateName: always-pass
            clusterScope: true
      - pause: {}

      canaryService: hemliga-lappen-prod-canary #required
      stableService: hemliga-lappen-service  # required
      trafficRouting:
        nginx:
          stableIngress: hemliga-lappen-ingress
          additionalIngressAnnotations:   # optional
            nginx.ingress.kubernetes.io/canary: "true"
            canary-by-header: X-Canary
            canary-by-header-value: canary
          ignoredAnnotations:
            - field.cattle.io/publicEndpoints
