hemliga-lappen-main/k8s/overlays/prod/service-preview.yaml
apiVersion: v1
kind: Service
metadata:
  name: hemliga-lappen-prod-preview
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: hemliga-lappen
