hemliga-lappen-main/k8s/overlays/prod/ingress-preview.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hemliga-lappen-ingress-preview
  labels:
    deployment: hemliga-lappen
spec:
  tls:
    - hosts:
        - hemliga-lappen-preview.prod.ur.se
  rules:
    - host: hemliga-lappen-preview.prod.ur.se
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hemliga-lappen-prod-preview
                port:
                  number: 80
